# MCProxy

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  fastmcp.json  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: PROVIDERS.md
docs/research/: international-providers.md  russian-cis-providers.md
src/mcproxy/: __init__.py  __main__.py  config.py  http.py  models.py  server.py
src/mcproxy/providers/: __init__.py  asocks.py  base.py  catalog.py  fineproxy.py  iproyal.py  proxy6.py  proxyline.py  proxymesh.py  proxyseller.py  proxystore.py  scraperapi.py  scrapingbee.py  webshare.py
tests/: conftest.py  test_providers.py  test_server.py
