[project]
name = "mcproxy"
version = "0.1.0"
description = "A FastMCP server that gives AI agents on-demand access to proxies from the world's leading and Russian proxy providers through a single unified interface."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "evgenygurin", email = "e.a.gurin@outlook.com" }]
keywords = [
    "mcp",
    "fastmcp",
    "proxy",
    "proxies",
    "residential-proxy",
    "datacenter-proxy",
    "mobile-proxy",
    "ai-agents",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/evgenygurin/mcproxy"
Repository = "https://github.com/evgenygurin/mcproxy"
Issues = "https://github.com/evgenygurin/mcproxy/issues"

[project.scripts]
mcproxy = "mcproxy.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcproxy"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
# RUF012: provider adapters use mutable class-level attributes as declarative
# config that subclasses override; ClassVar annotations add noise without value.
ignore = ["E501", "RUF012"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
